# ae2-bus-scanner

./: AE2BusScanner.spec  DESIGN.md  README.md  launch_gui.py  pyproject.toml  requirements.txt  run_cli.ps1  void_scan_test.json
scripts/: build_exe.ps1
src/ae2_bus_scanner/: app.py  cli.py
src/ae2_bus_scanner/gui/: __init__.py  main_window.py
src/ae2_bus_scanner/scanner/: __init__.py  dimensions.py  engine.py  exporters.py  models.py  nbt_utils.py
